tests/baselines/reference/es5-commonjs3.errors.txt
tests/cases/compiler/es5-commonjs3.ts(3,12): error TS1216: Identifier expected. '__esModule' is reserved as a marker for transpiled ES2015 module.


==== tests/cases/compiler/es5-commonjs3.ts (1 errors) ====
    
    export default "test";
    export var __esModule = 1;
               ~~~~~~~~~~
!!! error TS1216: Identifier expected. '__esModule' is reserved as a marker for transpiled ES2015 module.
    